--- a/src/assets/scss/base/project/_variables.scss
+++ b/src/assets/scss/base/project/_variables.scss
@@ -6,7 +6,6 @@
 Structure
 */
 $width-page: 1440px;
-$magic-number: 40px;
 
 
 
@@ -19,78 +18,12 @@ $magic-number: 40px;
 /*
 Breakpoints
 */
-$breakpoint-bear: $width-page / 16px * 1em;
-$breakpoint-wolf: 1040px / 16px * 1em;
-$breakpoint-fox: 800px / 16px * 1em;
-$breakpoint-rabbit: 600px / 16px * 1em;
-$breakpoint-mouse: 480px / 16px * 1em;
-
-
-
-
-
-
-
-
-
-/*
-Susy Configs
-*/
-$susy: (
-    columns: 12,
-    gutters: 30/60,
-    gutter-position: inside,
-    global-box-sizing: border-box
-);
-
-$susy-bear: $susy;
-
-$susy-wolf: $susy-bear;
-
-$susy-fox: (
-    columns: 6,
-    gutters: 40/90
-);
-
-$susy-rabbit: (
-    columns: 6,
-    gutters: 40/60
-);
-
-$susy-mouse: (
-    columns: 1,
-    gutters: 45/195
-);
-
-
-
-
-
-
-
-
-
 $breakpoints: (
-  'bear': (
-    breakpoint: $breakpoint-bear,
-    susy: $susy-bear
-  ),
-  'wolf': (
-    breakpoint: $breakpoint-wolf,
-    susy: $susy-wolf
-  ),
-  'fox': (
-    breakpoint: $breakpoint-fox,
-    susy: $susy-fox
-  ),
-  'rabbit': (
-    breakpoint: $breakpoint-rabbit,
-    susy: $susy-rabbit
-  ),
-  'mouse': (
-    breakpoint: $breakpoint-mouse,
-    susy: $susy-mouse
-  )
+  'bear': $width-page / 16px * 1em,
+  'wolf': 1040px / 16px * 1em,
+  'fox': 800px / 16px * 1em,
+  'rabbit': 600px / 16px * 1em,
+  'mouse': 480px / 16px * 1em
 );
 
 
