Added bison to default breakpoints.

--- a/craft/templates/_core/_layouts/default.html
+++ b/craft/templates/_core/_layouts/default.html
@@ -7,6 +7,7 @@
 {# set the default breakpoints. These can be overwritten by creating a breakpoints
 variable in _layouts/default #}
 {% set defaultBreakpoints = {
+	"bison" : (1441 / 16) ~ "em",
 	"bear" : (1041 / 16) ~ "em",
 	"wolf" : (801 / 16) ~ "em",
 	"fox" : (601 / 16) ~ "em",
