--- a/src/assets/scss/_core/base/utils/_helpers.scss
+++ b/src/assets/scss/_core/base/utils/_helpers.scss
@@ -3,27 +3,6 @@
 */
 
 /*
-Clearfix
-*/
-// .u_clearfix {
-// 	&:before, &:after {
-// 		content: "";
-// 		display: table;
-// 	}
-// 	&:after {
-// 		clear: both;
-// 	}
-// }
-
-
-
-
-
-
-
-
-
-/*
 List reset
 The common task of zeroing out a list
 */
@@ -31,10 +10,6 @@ The common task of zeroing out a list
 	list-style: none;
 	margin: 0;
 	padding: 0;
-
-	li {
-		margin-bottom: 0;
-	}
 }
 
 
@@ -78,4 +53,11 @@ Accessiblity-friendlier way to hide text from h5b
 
 .u_ov-hid {
 	overflow: hidden;
+}
+
+.u_button-reset {
+  background: transparent;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
