--- a/templates/_core/_partials/structure/header.html
+++ b/templates/_core/_partials/structure/header.html
@@ -4,33 +4,14 @@
 
 		{% block meta %}
 			{% if seo is not defined %}
-				<h1>Site SEO stuff isn't done.</h1>
-				<ol>
-					<li>Make a new asset source for images called Images with path "{basePath}uploads/img/" and url "{baseUrl}uploads/img/"</li>
-					<li>Make a plain text field called "Default SEO Description" (defaultSeoDescription). Give it a max length of 160 characters.</li>
-					<li>Make an asset field called "Default SEO Image" (defaultSeoImage).</li>
-					<li>Make a matrix field called "Social" (social). Give it plain text fields of "Twitter Handle" (twitterHandle) and Facebook ID (facebookId). Set max blocks to 1.</li>
-					<li>Make a matrix field called "Geo". Give it plain text fields of "Latitude", "Longitude", "Placename", and "Region". Max blocks 1.</li>
-					<li>Make a Global Set called "SEO" (seo).</li>
-					<li>Add those fields to the "SEO" global set.</li>
-				</ol>
+				<p>Go over to <a href="/admin/settings/plugins" target="_blank">Admin > Plugins</a> and enable install Architect.</p>
+				<p>Then go to the <a href="/admin/architect/import" target="_blank">import page</a> and import in the contents of init.json (in the project root).</p>
+				<p>Then come back here and refresh.</p>
 				{% exit %}
 			{% endif %}
 
 			{% set page = entry ?? category ?? null %}
 			{% if page %}
-
-				{% if page['seo'] is not defined %}
-					<h1>Page SEO stuff isn't done.</h1>
-					<ol>
-						<li>Make a Matrix field called "SEO". Max Blocks 1.</li>
-						<li>Give it a plain text field called "Page Title"</li>
-						<li>Give it a plain text field called "Description". Give it a max length of 160 characters.</li>
-						<li>Give it an asset field called "Image".</li>
-						<li>Put that field on EVERYTHING.</li>
-					</ol>
-					{% exit %}
-				{% endif %}
 
 				{% set pageSEO = null %}
 				{% if page.seo is not empty %}
@@ -49,7 +30,7 @@
 			{% endif %}
 		{% endblock %}
 
-		{% include '_partials/snippets/favicons' ignore missing %}
+		{% include '_snippets/favicons' ignore missing %}
 
 		{#
 		Inline main styles if <=16kb.
@@ -59,7 +40,6 @@
 			<style>{% include '_partials/snippets/main.css' ignore missing %}</style>
 		{% else %}
 			<style id="js_critical-css">
-				svg { opacity: 0; }
 				{% include ['_partials/snippets/' ~ (entry is defined ? entry.slug : 'critical') ~ '.css', '_partials/snippets/critical.css'] ignore missing %}
 			</style>
 		{% endif %}
