Now Google Analytics ID is in the CMS.  Misc c3 templating changes.

--- a/templates/_core/404.html
+++ b/templates/_core/404.html
@@ -1,5 +1,5 @@
 {% if entry is not defined %}
-    {% set entry = craft.entries.uri('404').first() %}
+    {% set entry = craft.entries.uri('404').one() %}
 {% endif %}
 
 {% embed "_layouts/default" %}
