--- a/templates/_core/_macros/general.html
+++ b/templates/_core/_macros/general.html
@@ -6,7 +6,7 @@ The dateFormat setting is in config/general.php
 {% macro formatDate(date='Now', format=null) %}{% spaceless %}
 
 	{% if format == null %}
-		{% set format = craft.config.locales[craft.locale].dateFormat %}
+		{% set format = craft.app.config.general.locales[craft.locale].dateFormat %}
 	{% endif %}
 
 	{{ date|date(format) }}
