Big ol' update.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,12 +3,12 @@
  *	[Project Title]
  *	[URL]
  *
- *	Designed and built at [company]
+ *	Designed and built at [company].
  *	[url]
  *
  *	by:
- *	[Michael Westwood]
- *	[April 2018]
+ *	[author]
+ *	[date]
  *
  */
 
