--- a/templates/_layouts/default.html
+++ b/templates/_layouts/default.html
@@ -8,7 +8,13 @@
 		'callback' : 'onMainCssLoad'
 	},
 	{
-		'path' : 'https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700',
+		'path' : 'https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif',
 		'callback' : 'onFontsCssLoad'
+	}
+] %}
+
+{% set scripts = [
+	{
+		'path' : '/assets/js/main.js'
 	}
 ] %}
