--- a/templates/_core/_partials/structure/footer.html
+++ b/templates/_core/_partials/structure/footer.html
@@ -1,3 +1,6 @@
+{% set stylesheets = stylesheets|merge(pageStyles ?? []) %}
+{% set scripts = scripts|merge(pageScripts ?? []) %}
+
 {#
 Allows js to easily identify which breakpoint we're on.
 #}
@@ -12,6 +15,14 @@ Allows js to easily identify which breakpoint we're on.
 Callbacks for when CSS is loaded.
 #}
 <script>
+	// http://www.html5rocks.com/en/tutorials/speed/script-loading/
+	function loadJs() {
+		!function(e,t,r){function n(){for(;d[0]&&"loaded"==d[0][f];)c=d.shift(),c[o]=!i.parentNode.insertBefore(c,i)}for(var s,a,c,d=[],i=e.scripts[0],o="onreadystatechange",f="readyState";s=r.shift();)a=e.createElement(t),"async"in i?(a.async=!1,e.head.appendChild(a)):i[f]?(d.push(a),a[o]=n):e.write("<"+t+' src="'+s+'" defer></'+t+">"),a.src=s}(document,"script",[{% for script in scripts %}"{{ script.path|refreshString }}"{% if not loop.last %},{% endif %}{% endfor %}])
+		{% if craft.app.config.general.devMode %}{% for script in scripts %}console.log('{{ script.path }} loaded');{% endfor %}{% endif %}
+	}
+</script>
+
+<script>
 
 	// if we've already got the fonts cached, skip the Promise bit.
 	if (sessionStorage.foutFontsLoaded) {
@@ -21,9 +32,14 @@ Callbacks for when CSS is loaded.
 	function onMainCssLoad() {
 		// once the main css is loaded ...
 
-		// ... remove the critical css to avoid conflicts.
+		// ... remove the critical css to avoid conflicts ...
 		var criticalCssElement = document.getElementById("js_critical-css");
-		criticalCssElement.parentNode.removeChild(criticalCssElement);
+		if (criticalCssElement) {
+			criticalCssElement.parentNode.removeChild(criticalCssElement);
+		}
+
+		// ... and then load in the Javascript.
+		loadJs();
 	};
 
 	function onFontsCssLoad() {
@@ -55,27 +71,33 @@ Callbacks for when CSS is loaded.
 	}
 </script>
 
+{#
+Preload and load all the CSS.
+#}
 {% for sheet in stylesheets %}
 	{% if not (loop.first and inlineStyles) %}
-		<link rel="preload" href="{{ sheet.path|refreshString }}" as="style" onload="this.onload=null;this.rel='stylesheet';{% if sheet.callback %}{{ sheet.callback }}(this);{% endif %}">
+		<link rel="preload" href="{{ sheet.path|refreshString }}" as="style" onload="
+			{% if craft.app.config.general.devMode %}console.log('{{ sheet.path }} preloaded and loaded');{% endif %}
+			this.onload=null;
+			this.rel='stylesheet';
+			{% if sheet.callback is defined %}{{ sheet.callback }}(this);{% endif %}">
 		<noscript><link rel="stylesheet" href="{{ sheet.path }}"></noscript>
 	{% endif %}
 {% endfor %}
 
 {#
-Non-blocking, order-preserving method of loading Javascript files, from
-http://www.html5rocks.com/en/tutorials/speed/script-loading/
+Preload all the JS. It'll be loaded in with loadJs(), which is called on onMainCssLoad().
 #}
-<script>
-	!function(e,t,r){function n(){for(;d[0]&&"loaded"==d[0][f];)c=d.shift(),c[o]=!i.parentNode.insertBefore(c,i)}for(var s,a,c,d=[],i=e.scripts[0],o="onreadystatechange",f="readyState";s=r.shift();)a=e.createElement(t),"async"in i?(a.async=!1,e.head.appendChild(a)):i[f]?(d.push(a),a[o]=n):e.write("<"+t+' src="'+s+'" defer></'+t+">"),a.src=s}(document,"script",[
-	"{{ '/assets/js/main.js'|refreshString }}"{% spaceless %}
-	{% if (pageJsFiles is defined) and (pageJsFiles is not empty) %},
-		{% for file in pageJsFiles %}
-			"/assets/js/{{ file }}"{% if not loop.last %}, {% endif %}
-		{% endfor %}
-	{% endif %}
-	{% endspaceless %}])
-</script>
+{% for script in scripts %}
+	<link rel="preload" href="{{ script.path|refreshString }}" as="script" onload="{% if craft.app.config.general.devMode %}console.log('{{ script.path }} preloaded');{% endif %}">
+{% endfor %}
+
+{#
+If we're inlining the main.css, onMainCssLoad() will never get called, so manually call loadJs().
+#}
+{% if inlineStyles %}
+	<script>loadJs();</script>
+{% endif %}
 
 {#
 Google Anaytics tracking.
