--- a/templates/_core/_partials/structure/meta.html
+++ b/templates/_core/_partials/structure/meta.html
@@ -63,17 +63,4 @@
 {% endif %}
 
 {# Localisation stuff #}
-{% if entry is defined %}
-	<meta http-equiv="content-language" content="{{ craft.locale }}">
-
-	{% set otherLocales = craft.i18n.getSiteLocaleIds()|without(craft.locale) %}
-	{% for locale in otherLocales %}
-
-		{% set localeEntry = craft.entries.id(entry.id).locale(locale).first %}
-
-		{% if (localeEntry) and (localeEntry.locale == locale) %}
-			<link rel="alternate" hreflang="{{ craft.app.config.general.locales[locale].languageCode }}" href="{{ localeEntry.getUrl() }}" />
-		{% endif %}
-
-	{% endfor %}
-{% endif %}
+<meta http-equiv="content-language" content="{{ craft.app.language }}">
